# scintillating_chamber

./: .gitignore  NOTICE.txt  README.md  __main__.py
software/signal_display/: .gitignore  2025-04-11 22:39:48.778073.csv  imgui.ini  pyproject.toml  requirements.txt  setup.py
software/signal_display/draft_display/display_2/Visualizer/: app.py
software/signal_display/drafts/: scintillator_stuff.mdp
software/signal_display/drafts/ab_compatibility_drafts/: impl_ab_data_input_manager.py
software/signal_display/drafts/draft_display/display_1/: detection_display.py  input_data.py  opengl_stuff.py  run_window.py  scintillator_blocks.py  vbo_vao_stuff.py  window.py
software/signal_display/drafts/draft_display/display_2/: documentation.txt
software/signal_display/drafts/impl_a_drafts/: axes_original.py  parameter_interface_original.py  shader_renderer.py
software/signal_display/drafts/impl_a_drafts/shaders/: vertex.glsl  (+1 more)
software/signal_display/drafts/impl_b_drafts/: imgui_stuff.py  scintillator_original_size.txt  t1.py  t2.py
software/signal_display/scintillator_display/: __main__.py
software/signal_display/scintillator_display/compat/: entrypoint.py  imgui_manager.py  main.py  pyserial_singleton.py  universal_values.py  viewport_manager.py
software/signal_display/scintillator_display/display/: camera_shader_controls.py  fragment_shader.glsl  impl_ab_data_input_manager.py  vao_vbo.py  vertex_shader.glsl  xyz_axes.py
software/signal_display/scintillator_display/math/: convex_hull.py
software/signal_display/tests/: test_convex_hull.py  test_data_manager.py
(+284 files in other folders)
